force-app/main/default/objects/Account/fields/Funding_Requests_Made__c.field-meta.xml
<CustomField>
    <fullName>Funding_Requests_Made__c</fullName>
    <inlineHelpText>The number of Funding Requests that this organisation has made</inlineHelpText>
    <label>Funding Requests Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>