force-app/main/default/objects/Account/fields/Successful_Requests__c.field-meta.xml
<CustomField>
    <fullName>Successful_Requests__c</fullName>
    <inlineHelpText>The number of funding requests that have been awarded (including those fully disbursed)</inlineHelpText>
    <label>Successful Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>