force-app/main/default/objects/Account/fields/Total_Funds_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Total_Funds_Awarded__c</fullName>
    <inlineHelpText>The total funds awarded from any successful funding requests</inlineHelpText>
    <label>Total Funds Awarded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>