force-app/main/default/objects/Account/fields/Total_Funds_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Funds_Requested__c</fullName>
    <inlineHelpText>The total value of funds requested</inlineHelpText>
    <label>Total Funds Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>